gio/gwin32appinfo.c
@@ -3382,7 +3382,7 @@ watch_keys (void)
 static void
 g_win32_appinfo_init (void)
 {
-  static gboolean initialized = FALSE;
+  static gsize initialized;
 
   if (g_once_init_enter (&initialized))
     {
